z-index fix so suggestions render on top of the form input groups

--- a/src/EmoteAutosuggest.css
+++ b/src/EmoteAutosuggest.css
@@ -42,7 +42,7 @@ body {
     font-size: 16px;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    z-index: 2;
+    z-index: 3;
   }
   
   .react-autosuggest__suggestions-list {
